# stellovault

./: COMPLETED.md  README.md  TODO-TS.md  TODO.md
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/bridge/: Cargo.toml
contracts/bridge/src/: lib.rs
contracts/collateral-registry/src/: classification.rs  lib.rs
contracts/escrow-manager/: Cargo.toml
contracts/escrow-manager/src/: lib.rs  refund.rs
contracts/escrow-manager/tests/: proptest_escrow.rs
contracts/example/src/: lib.rs
contracts/fuzz/: Cargo.toml
contracts/fuzz/fuzz_targets/: fuzz_escrow_invariants.rs  fuzz_governance_voting.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/governance/tests/: proptest_governance.rs
contracts/invoice-contract/: Cargo.toml
contracts/invoice-contract/src/: lib.rs
contracts/loan-management/: Cargo.toml
contracts/loan-management/src/: default_handling.rs  lib.rs
contracts/oracle-adapter/: Cargo.toml
contracts/oracle-adapter/src/: lib.rs
contracts/protocol-treasury/: Cargo.toml
contracts/protocol-treasury/src/: lib.rs
contracts/reputation-registry/src/: lib.rs
contracts/risk-assessment/: Cargo.toml
contracts/risk-assessment/src/: lib.rs
contracts/upgrade-system/src/: lib.rs
server/: .env.example  .gitignore  Cargo.toml  README.md  jest.config.ts  package-lock.json  package.json  prisma.config.js  prisma.config.ts  tsconfig.json
server/migrations/: 000_create_base_tables.sql  001_create_escrows.sql  002_add_collateral_statuses.sql  002_create_collateral.sql
server/prisma/: schema.prisma  seed.ts
server/prisma/migrations/: migration_lock.toml
server/scripts/: test-escrow-flow.js  test-loan-flow.js  test-wallet-flow.js
server/src/: app.ts  app_state.rs  collateral.rs  collateral_handlers.rs  collateral_indexer.rs  collateral_service.rs  escrow.rs  escrow_service.rs  event_listener.rs  handlers.rs  lib.rs  loan.rs  main.rs  models.rs  routes.rs  server.ts  services.rs  websocket.rs
server/src/__tests__/: webhook-signature.service.test.ts
server/src/auth/: jwt.rs  mod.rs
server/src/collateral/: indexer.rs  mod.rs  service.rs
server/src/config/: contracts.rs  env.ts  jwt.ts  logger.ts  mod.rs  prisma.ts
server/src/controllers/: analytics.controller.ts  auth.controller.ts  collateral.controller.ts  escrow.controller.ts  governance.controller.ts  loan.controller.ts  oracle.controller.ts  risk.controller.ts  wallet.controller.ts  webhook.controller.ts
server/src/error/: mod.rs
server/src/escrow/: model.rs  service.rs
server/src/handlers/: collateral.rs  escrow.rs  mod.rs  oracle.rs
server/src/indexer/: handlers.rs  mod.rs
server/src/middleware/: auth.middleware.ts  auth.rs  error.middleware.ts  mod.rs  rate_limiter.rs  request-trace.middleware.ts  security.rs
server/src/models/: auth.rs  mod.rs  oracle.rs
server/src/oracle/: model.rs  rate_limiter.rs  service.rs
server/src/routes/: analytics.routes.ts  collateral.routes.ts  collateral.rs  dispute.routes.ts  escrow.routes.ts  loan.routes.ts  mod.rs  monitoring.routes.ts  oracle.routes.ts  risk.routes.ts  webhook.routes.ts
server/src/scripts/: rebalance.ts
server/src/services/: analytics.rs  analytics.service.ts  auth.service.ts  blockchain.service.ts  collateral.service.ts  contract.service.ts  data-retention.service.ts  database.service.ts  escrow.service.ts  event-monitoring.service.ts  event_monitoring_service.rs  loan.service.ts  (+17 more)
server/tests/: escrow_consistency_tests.rs
(+247 files in other folders)
