[package]
name = "stellovault-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }


# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }


# Environment and configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptography and security
bcrypt = "0.15"
jsonwebtoken = "9.0"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json"] }

# Soroban and Crypto
# Soroban and Crypto
stellar-xdr = { version = "20.0.0", features = ["std"] }
ed25519-dalek = "2.0.0" # Downgraded to match soroban-sdk requirement
hex = "0.4"
# WebSocket support
axum-tungstenite = "0.3"
tokio-tungstenite = "0.20"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Background job scheduling
tokio-cron-scheduler = "0.9"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# For interacting with Stellar/Soroban, we'll use reqwest to make HTTP calls
# to Horizon API instead of the stellar-sdk which is still experimental


# Futures for WebSocket
futures-util = "0.3"

# Random for simulation
rand = "0.8"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }